Load classification only when needed.